--- a/calculator.html
+++ b/calculator.html
@@ -4,12 +4,45 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title></title>
+    <title>calculator</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="calculator.css">
   </head>
   <body>
+
+    <!-- // The Calculator main Container  -->
+    <div class="mainContainer">
+
+      <!-- The Calcualor Results Screen -->
+      <div class="calScreen"></div>
+
+      <!-- The Calculator Num Pad - The Buttons -->
+      <div class="calNumPad">
+
+        <!-- Numbers and operators buttons -->
+         <div class="calNumPad1 acOP">AC</div>
+         <div class="calNumPad2 plusMinus">+/-</div>
+         <div class="calNumPad3 percentage">%</div>
+         <div class="calNumPad4 division">÷</div>
+         <div class="calNumPad5 num7">7</div>
+         <div class="calNumPad6 num8">8</div>
+         <div class="calNumPad7 num9">9</div>
+         <div class="calNumPad8 multiply">X</div>
+         <div class="calNumPad9 num4">4</div>
+         <div class="calNumPad10 num5">5</div>
+         <div class="calNumPad11 num6">6</div>
+         <div class="calNumPad12 minus">-</div>
+         <div class="calNumPad13 num1">1</div>
+         <div class="calNumPad14 num2">2</div>
+         <div class="calNumPad15 num3">3</div>
+         <div class="calNumPad16 plus">+</div>
+         <div class="calNumPad17 scintific">SC</div>
+         <div class="calNumPad18 num0">0</div>
+         <div class="calNumPad19 dot">.</div>
+         <div class="calNumPad20 equal">=</div>
+      </div>
+    </div>
     
     <script src="calculator.js" async defer></script>
   </body>
